--- a/Project 6.uvprojx
+++ b/Project 6.uvprojx
@@ -185,6 +185,7 @@
             <uocXRam>0</uocXRam>
             <RvdsVP>0</RvdsVP>
             <RvdsMve>0</RvdsMve>
+            <RvdsCdeCp>0</RvdsCdeCp>
             <hadIRAM2>0</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
@@ -351,7 +352,7 @@
             <NoWarn>0</NoWarn>
             <uSurpInc>0</uSurpInc>
             <useXO>0</useXO>
-            <uClangAs>0</uClangAs>
+            <ClangAsOpt>4</ClangAsOpt>
             <VariousControls>
               <MiscControls></MiscControls>
               <Define></Define>
@@ -406,6 +407,26 @@
               <FileName>io.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\UserSource\src\io.c</FilePath>
+            </File>
+            <File>
+              <FileName>a3144.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\UserSource\src\a3144.c</FilePath>
+            </File>
+            <File>
+              <FileName>timer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\UserSource\src\timer.c</FilePath>
+            </File>
+            <File>
+              <FileName>w25q16.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\UserSource\src\w25q16.c</FilePath>
+            </File>
+            <File>
+              <FileName>spi.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\UserSource\src\spi.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -488,5 +509,20 @@
     <components/>
     <files/>
   </RTE>
+
+  <LayerInfo>
+    <Layers>
+      <Layer>
+        <LayName>&lt;Project Info&gt;</LayName>
+        <LayDesc></LayDesc>
+        <LayUrl></LayUrl>
+        <LayKeys></LayKeys>
+        <LayCat></LayCat>
+        <LayLic></LayLic>
+        <LayTarg>0</LayTarg>
+        <LayPrjMark>1</LayPrjMark>
+      </Layer>
+    </Layers>
+  </LayerInfo>
 
 </Project>
